--- a/index.html
+++ b/index.html
@@ -8,5 +8,41 @@
 	</head>
 	<body>
 		<h1 class="bg-red-500">TailwindCSS Sandbox</h1>
+
+		<h2>Grid Cards</h2>
+		<div
+			class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
+		>
+			<div
+				class="bg-gradient-to-br from-green-400 to-black h-10 text-center rounded-md text-white flex items-center justify-center"
+			>
+				1
+			</div>
+			<div
+				class="bg-gradient-to-br from-green-400 to-black h-10 text-center rounded-md text-white flex items-center justify-center"
+			>
+				2
+			</div>
+			<div
+				class="bg-gradient-to-br from-green-400 to-black h-10 text-center rounded-md text-white flex items-center justify-center"
+			>
+				3
+			</div>
+			<div
+				class="bg-gradient-to-br from-green-400 to-black h-10 text-center rounded-md text-white flex items-center justify-center"
+			>
+				4
+			</div>
+			<div
+				class="bg-gradient-to-br from-green-400 to-black h-10 text-center rounded-md text-white flex items-center justify-center"
+			>
+				5
+			</div>
+			<div
+				class="bg-gradient-to-br from-green-400 to-black h-10 text-center rounded-md text-white flex items-center justify-center"
+			>
+				6
+			</div>
+		</div>
 	</body>
 </html>
